--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="Project_1.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="about.html">About</a>
@@ -66,7 +66,7 @@
                     tellus ac cursus commodo.</p>
             </div>
             <div class="col-md-5">
-                <img class="img-fluid" src="Images/about-1.jpg" alt="">
+                <img class="img-fluid" src="about-1.jpg" alt="">
                 <!-- img-fluid for responsive -->
             </div>
         </div>
@@ -80,7 +80,7 @@
                     tellus ac cursus commodo.</p>
             </div>
             <div class="col-md-5 order-md-1">
-                <img class="img-fluid" src="Images/about-2.jpg" alt="">
+                <img class="img-fluid" src="about-2.jpg" alt="">
             </div>
         </div>
 
@@ -93,7 +93,7 @@
                     tellus ac cursus commodo.</p>
             </div>
             <div class="col-md-5">
-                <img class="img-fluid" src="Images/about-3.jpg" alt="">
+                <img class="img-fluid" src="about-3.jpg" alt="">
             </div>
         </div>
     </div>
